--- a/Omnifood/index.html
+++ b/Omnifood/index.html
@@ -18,11 +18,11 @@
       href="vendors/css/grid.css"
     />
     <link
-    rel="stylesheet"
-    type="text/css"
-    media="screen"
-    href="vendors/css/ionicons.min.css"
-  />
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="vendors/css/ionicons.min.css"
+    />
     <link
       rel="stylesheet"
       type="text/css"
@@ -71,7 +71,6 @@
     </header>
     <section class="section-features">
       <div class="row">
-        
         <h2>Get food fast &mdash; not fast food.</h2>
         <p class="long-copy">
           Hello, we’re Omnifood, your new premium food delivery service. We know
@@ -115,6 +114,99 @@
             you feel like. You can also choose from our menu containing over 100
             delicious meals. It's up to you!
           </p>
+        </div>
+      </div>
+    </section>
+    <section class="section-meals">
+      <ul class="meals-showcase">
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="resources/images/1.jpg"
+              alt="Korean bibimbap with egg and vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="resources/images/2.jpg"
+              alt="Simple italian pizza with cherry tomatoes"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="resources/images/3.jpg"
+              alt="Chicken breast steak with vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/images/4.jpg" alt="Autumn pumpkin soup" />
+          </figure>
+        </li>
+      </ul>
+      <ul class="meals-showcase">
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="resources/images/5.jpg"
+              alt="Paleo beef steak with vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="resources/images/6.jpg"
+              alt="Healthy baguette with egg and vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="resources/images/7.jpg"
+              alt="Burger with cheddar and bacon"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="resources/images/8.jpg"
+              alt="Granola with cherries and strawberries"
+            />
+          </figure>
+        </li>
+      </ul>
+    </section>
+    <section class="section-steps">
+      <div class="row">
+        <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-2">
+          <img src="resources/images/app-iPhone.png" alt="Ominifood" srcset="" class="app-screen">
+        </div>
+        <div class="col span-1-of-2">
+          <div class="works-step">
+            <div>1</div>
+            <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+          </div>
+          <div class="works-step">
+            <div>2</div>
+            <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+          </div>
+          <div class="works-step">
+            <div>3</div>
+            <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+          </div>
+          <a href="#"><img src="resources/images/download-app.svg" alt="" srcset=""></a>
+          <a href="#"><img src="resources/images/download-app-android.png" alt="" srcset=""></a>
         </div>
       </div>
     </section>
