--- a/Omnifood/index.html
+++ b/Omnifood/index.html
@@ -118,7 +118,7 @@
       </div>
     </section>
     <section class="section-meals">
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img
@@ -149,7 +149,7 @@
           </figure>
         </li>
       </ul>
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img
@@ -189,24 +189,135 @@
         <h2>How it works &mdash; Simple as 1, 2, 3</h2>
       </div>
       <div class="row">
-        <div class="col span-1-of-2">
-          <img src="resources/images/app-iPhone.png" alt="Ominifood" srcset="" class="app-screen">
+        <div class="col span-1-of-2 steps-box">
+          <img
+            src="resources/images/app-iPhone.png"
+            alt="Ominifood"
+            srcset=""
+            class="app-screen"
+          />
         </div>
-        <div class="col span-1-of-2">
+        <div class="col span-1-of-2 steps-box">
           <div class="works-step">
             <div>1</div>
-            <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+            <p>
+              Choose the subscription plan that best fits your needs and sign up
+              today.
+            </p>
           </div>
           <div class="works-step">
             <div>2</div>
-            <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+            <p>
+              Order your delicious meal using our mobile app or website. Or you
+              can even call us!
+            </p>
           </div>
           <div class="works-step">
             <div>3</div>
-            <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+            <p>
+              Enjoy your meal after less than 20 minutes. See you the next time!
+            </p>
           </div>
-          <a href="#"><img src="resources/images/download-app.svg" alt="" srcset=""></a>
-          <a href="#"><img src="resources/images/download-app-android.png" alt="" srcset=""></a>
+          <a href="#" class="btn-app"
+            ><img src="resources/images/download-app.svg"
+          /></a>
+          <a href="#" class="btn-app"
+            ><img src="resources/images/download-app-android.png"
+          /></a>
+        </div>
+      </div>
+    </section>
+    <section class="section-cities">
+      <div class="row">
+        <h2>We're currently in these cities</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-4 cities-box">
+          <img src="resources/images/lisbon-3.jpg" alt="" />
+          <h3>Lisbon</h3>
+          <div class="city-feature">
+            <i class="ion-person icon-small"></i>1600+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="ion-android-star icon-small"></i>60+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="ion-social-twitter icon-small"></i
+            ><a class="twitter" href="">@omnifood_lx</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4 cities-box">
+          <img src="resources/images/san-francisco.jpg" alt="" />
+          <h3>San Francisco</h3>
+          <div class="city-feature">
+            <i class="ion-person icon-small"></i>3700+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="ion-android-star icon-small"></i>160+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="ion-social-twitter icon-small"></i>
+            <a class="twitter" href="">@omnifood_sf</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4 cities-box">
+          <img src="resources/images/berlin.jpg" alt="" />
+          <h3>Berlin</h3>
+          <div class="city-feature">
+            <i class="ion-person icon-small"></i>2300+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="ion-android-star icon-small"></i>110+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="ion-social-twitter icon-small"></i
+            ><a class="twitter" href="">@omnifood_berlin</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4 cities-box">
+          <img src="resources/images/london.jpg" alt="" />
+          <h3>London</h3>
+          <div class="city-feature">
+            <i class="ion-person icon-small"></i>1200+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="ion-android-star icon-small"></i>50+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="ion-social-twitter icon-small"></i
+            ><a class="twitter" href="">@omnifood_london</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-testimonials">
+      <div class="row">
+        <h2>Our customers can't live without us</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-3">
+          <blockquote class="testimonials-content">
+            Omnifood is just awesome! I just launched a startup which leaves me
+            with no time for cooking, so Omnifood is a life-saver. Now that I
+            got used to it, I couldn't live without my daily meals!
+            <cite><img src="resources/images/customer-1.jpg" alt="">Alberto Duncan</cite>
+          </blockquote>
+        </div>
+        <div class="col span-1-of-3">
+          <blockquote class="testimonials-content">
+            Inexpensive, healthy and great-tasting meals, delivered right to my
+            home. We have lots of food delivery here in Lisbon, but no one comes
+            even close to Omifood. Me and my family are so in love!
+            <cite><img src="resources/images/customer-2.jpg" alt="">Joana Silva</cite>
+          </blockquote>
+        </div>
+        <div class="col span-1-of-3">
+          <blockquote >
+            I was looking for a quick and easy food delivery service in San
+            Franciso. I tried a lot of them and ended up with Omnifood. Best
+            food delivery service in the Bay Area. Keep up the great work!
+            <cite><img src="resources/images/customer-3.jpg" alt=""> Milton Chapman</cite>
+          </blockquote>
         </div>
       </div>
     </section>
