--- a/Omnifood/index.html
+++ b/Omnifood/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ominifood</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -28,6 +27,12 @@
       type="text/css"
       media="screen"
       href="resources/css/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="resources/css/queries.css"
     />
     <link
       href="http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic"
@@ -441,7 +446,13 @@
               <label for="name">Name</label>
             </div>
             <div class="col span-2-of-3">
-              <input type="text" name="name" id="name" placeholder="your name" required/>
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="your name"
+                required
+              />
             </div>
           </div>
           <div class="row">
@@ -449,7 +460,13 @@
               <label for="email">Email</label>
             </div>
             <div class="col span-2-of-3">
-              <input type="email" name="email" id="email" placeholder="your email" required/>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="your email"
+                required
+              />
             </div>
           </div>
           <div class="row">
@@ -468,7 +485,12 @@
               <label for="newsletter">Newsletter</label>
             </div>
             <div class="col span-2-of-3">
-              <input type="checkbox" name="newsletter" id="newsletter" checked>Yes, please
+              <input
+                type="checkbox"
+                name="newsletter"
+                id="newsletter"
+                checked
+              />Yes, please
             </div>
           </div>
           <div class="row">
@@ -476,7 +498,7 @@
               <label for="dropusaline">Drop us a line</label>
             </div>
             <div class="col span-2-of-3">
-              <textarea name="dropusaline" id="dropusaline" ></textarea>
+              <textarea name="dropusaline" id="dropusaline"></textarea>
             </div>
           </div>
           <div class="row">
@@ -484,11 +506,37 @@
               <label for="submit">&nbsp;</label>
             </div>
             <div class="col span-2-of-3">
-              <input type="submit" name="submit" id="submit" value="Submit">
+              <input type="submit" name="submit" id="submit" value="Submit" />
             </div>
           </div>
         </form>
       </div>
     </section>
+    <footer>
+      <div class="row">
+        <div class="col span-1-of-2">
+          <ul class="footer-nav">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">iOS App</a></li>
+            <li><a href="#">Android App</a></li>
+          </ul>
+        </div>
+        <div class="col span-1-of-2">
+          <ul class="social-links">
+            <li><a href="#"><i class="ion-social-facebook icon-small"></i></a></li>
+            <li><a href="#"><i class="ion-social-twitter icon-small"></i></a></li>
+            <li><a href="#"><i class="ion-social-googleplus icon-small"></i></a></li>
+            <li><a href="#"><i class="ion-social-instagram icon-small"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <p>
+          Copy right &copy; 2020,All rights 
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
