--- a/Omnifood/new-version/HTML-Fundamentals/index.html
+++ b/Omnifood/new-version/HTML-Fundamentals/index.html
@@ -93,17 +93,17 @@
       <h4>Related Posts</h4>
       <ul>
         <li>
-          <img src="images/related-1.jpg" alt="" width="75" />
+          <img src="images/related-1.jpg" alt="" width="75" height="75" />
           <a href="#">How to Learn Web Development</a>
           <p>By Jonas Schmedtmann</p>
         </li>
         <li>
-          <img src="images/related-2.jpg" alt="" width="75" />
+          <img src="images/related-2.jpg" alt="" width="75" height="75" />
           <a href="#">The Unknown Powers of CSS</a>
           <p>By Jim Dillon</p>
         </li>
         <li>
-          <img src="images/related-3.jpg" alt="" width="75" />
+          <img src="images/related-3.jpg" alt="" width="75" height="75" />
           <a href="#">Why JavaScript is Awesome</a>
           <p>By Matilda</p>
         </li>
