--- a/Omnifood/new-version/HTML-Fundamentals/Challenges.html
+++ b/Omnifood/new-version/HTML-Fundamentals/Challenges.html
@@ -11,5 +11,33 @@
     <a href="index.html" target="_blank" rel="noopener noreferrer"
       >Back to HOME</a
     >
+    <article>
+      <h2>Coverse Chunk Tylor All Star Low Top</h2>
+      <img
+        src="images/challenges.jpg"
+        alt="CHALLENGE"
+        height="250"
+        width="250"
+      />
+      <br />
+      <p><strong>$80.88</strong></p>
+      <p>Free shipping</p>
+      <p>
+        Ready to down up or down. these classic canvas are in everyday wardrop
+        sample
+      </p>
+      <p>
+        <a href="#" target="_blank" rel="noopener noreferrer"
+          >More Infermation&rarr;</a
+        >
+      </p>
+      <h4>Product Details</h4>
+      <ul>
+        <li>Lightweigth,durable canvas sneakers</li>
+        <li>Lightweigth,durable canvas sneakers</li>
+        <li>Lightweigth,durable canvas sneakers</li>
+      </ul>
+      <button>Add to cart</button>
+    </article>
   </body>
 </html>
