--- a/Omnifood/new-version/HTML-Fundamentals/index.html
+++ b/Omnifood/new-version/HTML-Fundamentals/index.html
@@ -29,7 +29,7 @@
       <header>
         <h2>The Basic Language of the Web: HTML</h2>
         <img src="images/laura-jones.jpg" alt="Auther" height="50" width="50" />
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <p id="author">Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
         <img
           src="images/post-img.jpg"
           alt="Welcome image"
@@ -92,24 +92,24 @@
     </article>
     <aside>
       <h4>Related Posts</h4>
-      <ul>
+      <ul class="relate-list">
         <li>
           <img src="images/related-1.jpg" alt="" width="75" height="75" />
           <a href="#">How to Learn Web Development</a>
-          <p>By Jonas Schmedtmann</p>
+          <p class="related-author">By Jonas Schmedtmann</p>
         </li>
         <li>
           <img src="images/related-2.jpg" alt="" width="75" height="75" />
           <a href="#">The Unknown Powers of CSS</a>
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
         <li>
           <img src="images/related-3.jpg" alt="" width="75" height="75" />
           <a href="#">Why JavaScript is Awesome</a>
-          <p>By Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
-    <footer>Copyright &copy; 2027 by The Code Magazine.</footer>
+    <footer><p id="copyright">Copyright &copy; 2027 by The Code Magazine.</p></footer>
   </body>
 </html>
