--- a/Omnifood/new-version/HTML-Fundamentals/index.html
+++ b/Omnifood/new-version/HTML-Fundamentals/index.html
@@ -14,7 +14,7 @@
     <h4>The Basic Language of the Web: HTML</h4>
     <h5>The Basic Language of the Web: HTML</h5>
     <h6>The Basic Language of the Web: HTML</h6> -->
-    <header>
+    <header class="main-header">
       <h1>📘 The Code Magazine</h1>
       <nav>
         <a href="blog.html" target="_blank" rel="noopener noreferrer">Blog</a>
@@ -61,7 +61,7 @@
       </p>
       <p>In HTML, each element is made up of 3 parts:</p>
       <ol>
-        <li>The opening tag</li>
+        <li class="first-li">The opening tag</li>
         <li>The closing tag</li>
         <li>The actual element</li>
       </ol>
@@ -79,7 +79,7 @@
         web. Here are 5 of them:
       </p>
       <ul>
-        <li>To be able to use the fundamental web dev language</li>
+        <li class="first-li">To be able to use the fundamental web dev language</li>
         <li>
           To hand-craft beautiful websites instead of relying on tools like
           Worpress or Wix
