--- a/Omnifood/new-version/HTML-Fundamentals/Challenges.html
+++ b/Omnifood/new-version/HTML-Fundamentals/Challenges.html
@@ -8,10 +8,6 @@
     <link rel="stylesheet" href="style/challenge.css" />
   </head>
   <body>
-    <!-- <h2>CHALLENGES</h2>
-    <a href="index.html" target="_blank" rel="noopener noreferrer"
-      >Back to HOME</a
-    > -->
     <div class="container">
       <article>
         <h2 class="title-header">Coverse Chunk Tylor All Star Low Top</h2>
@@ -22,27 +18,42 @@
           width="250"
         />
         <br />
-        <p class="price-title"><strong>$80.88</strong></p>
-        <p class="free-shipping">Free shipping</p>
-        <p>
-          Ready to down up or down. these classic canvas are in everyday wardrop
-          sample
-        </p>
-        <p>
-          <a
-            class="more-info"
-            href="http://"
-            target="_blank"
-            rel="noopener noreferrer"
-            >More Infermation&rarr;</a
-          >
-        </p>
-        <h4 class="title-product">Product Details</h4>
-        <ul class="details-list">
-          <li>Lightweigth,durable canvas sneakers</li>
-          <li>Lightweigth,durable canvas sneakers</li>
-          <li>Lightweigth,durable canvas sneakers</li>
-        </ul>
+        <div class="hero-content-one">
+          <div class="clear-fix">
+            <p class="price-title"><strong>$80.88</strong></p>
+            <p class="free-shipping">Free shipping</p>
+          </div>
+          <p class="sale">Sale</p>
+          <p>
+            Ready to down up or down. these classic canvas are in everyday
+            wardrop sample
+          </p>
+          <p>
+            <a
+              class="more-info"
+              href="http://"
+              target="_blank"
+              rel="noopener noreferrer"
+              >More Infermation&rarr;</a
+            >
+          </p>
+          <div class="colors">
+            <div class="color color-blue"></div>
+            <div class="color color-red"></div>
+            <div class="color color-green"></div>
+            <div class="color color-orenge"></div>
+            <div class="color color-yellowgreen"></div>
+            <div class="color color-navy"></div>
+          </div>
+        </div>
+        <div class="hero-content-two">
+          <h4 class="title-product">Product Details</h4>
+          <ul class="details-list">
+            <li>Lightweigth,durable canvas sneakers</li>
+            <li>Lightweigth,durable canvas sneakers</li>
+            <li>Lightweigth,durable canvas sneakers</li>
+          </ul>
+        </div>
         <button>Add to cart</button>
       </article>
     </div>
