--- a/frontend-zero-to-hero/challenge.html
+++ b/frontend-zero-to-hero/challenge.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Challenge</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/challenge.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <article>
-        <h2>Coverse Chunk Tylor All Star Low Top</h2>
+    <article class="container">
+        <h2 class="challenge-header">Coverse Chunk Tylor All Star Low Top</h2>
         <img src="./img/challenges.jpg" alt="" width="250px" height="250px">
-        <p><strong>$65.00</strong></p>
-        <p>Free shipping</p>
+        <p class="price"><strong>$65.00</strong></p>
+        <p class="shipping">Free shipping</p>
         <p>Ready to down up or down. these classic canvas are in everyday
             wardrop sample</p>
-            <a href="">More Infermation&rarr;</a>
-            <h3>Product Details</h3>
-            <ul>
-                <li>Lightweigth,durable canvas sneakers</li>
+            <a class="more-info" href="">More Infermation&rarr;</a>
+            <h3 class="product-details">Product Details</h3>
+            <ul class="detail-list">
+            <li>Lightweigth,durable canvas sneakers</li>
             <li>Lightweigth,durable canvas sneakers</li>
             <li>Lightweigth,durable canvas sneakers</li>
             </ul>
-            <button>Add to cart</button>
+            <button class="cart-button">Add to cart</button>
     </article>
 </body>
 </html>
