--- a/frontend-zero-to-hero/challenge.html
+++ b/frontend-zero-to-hero/challenge.html
@@ -14,7 +14,7 @@
         <img src="./img/challenges.jpg" alt="" width="250px" height="250px">
         <p class="price"><strong>$65.00</strong></p>
         <p class="shipping">Free shipping</p>
-        <p>Ready to down up or down. these classic canvas are in everyday
+        <p class="details-text">Ready to down up or down. these classic canvas are in everyday
             wardrop sample</p>
             <a class="more-info" href="">More Infermation&rarr;</a>
             <h3 class="product-details">Product Details</h3>
