--- a/frontend-zero-to-hero/challenge.html
+++ b/frontend-zero-to-hero/challenge.html
@@ -14,9 +14,19 @@
         <img src="./img/challenges.jpg" alt="" width="250px" height="250px">
         <p class="price"><strong>$65.00</strong></p>
         <p class="shipping">Free shipping</p>
+        <p class="sale">Sale</p>
         <p class="details-text">Ready to down up or down. these classic canvas are in everyday
             wardrop sample</p>
             <a class="more-info" href="">More Infermation&rarr;</a>
+            <div class="colors">
+                <div class="color"></div>
+                <div class="color color-blue"></div>
+                <div class="color color-red"></div>
+                <div class="color color-yellow"></div>
+                <div class="color color-green"></div>
+                <div class="color color-brown"></div>
+            </div>
+           
             <h3 class="product-details">Product Details</h3>
             <ul class="detail-list">
             <li>Lightweigth,durable canvas sneakers</li>
@@ -24,6 +34,7 @@
             <li>Lightweigth,durable canvas sneakers</li>
             </ul>
             <button class="cart-button">Add to cart</button>
+
     </article>
 </body>
 </html>
