--- a/frontend-zero-to-hero/index-float.html
+++ b/frontend-zero-to-hero/index-float.html
@@ -14,8 +14,8 @@
       <nav>
         <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
-        <a href="#">Flexbox</a>
-        <a href="#">CSS Grid</a>
+        <a href="./layout/flexbox.html">Flexbox</a>
+        <a href="./layout/css-grid.html">CSS Grid</a>
       </nav>
       <!-- <div class="clear"></div> -->
     </header>
