--- a/frontend-zero-to-hero/flex-practice.html
+++ b/frontend-zero-to-hero/flex-practice.html
@@ -131,5 +131,142 @@
       <div>2</div>
       <div>3</div>
     </div>
+    <div class="flex-container-align-content-space-between">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div>
+      <div>11</div>
+      <div>12</div>
+    </div>
+    <div class="flex-container-align-content-space-around">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div>
+      <div>11</div>
+      <div>12</div>
+    </div>
+    <div class="flex-container-align-content-stretch">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div>
+      <div>11</div>
+      <div>12</div>
+    </div>
+    <div class="flex-container-align-content-center">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div>
+    </div>
+    <div class="flex-container-align-content-flex-start">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div>
+      <div>11</div>
+      <div>12</div>
+    </div>
+    <div class="flex-container-align-content-flex-end">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div>
+      <div>11</div>
+      <div>12</div>
+    </div>
+    <div class="flex-container-align-content-justify-content-center">
+      <div>1</div>
+    </div>
+    <div class="flex-container-item">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+    </div>
+    <div class="flex-container-item-order">
+      <div style="order: 3">1</div>
+      <div style="order: 2">2</div>
+      <div style="order: 4">3</div>
+      <div style="order: 1">4</div>
+    </div>
+    <div class="flex-container-flex-grow">
+      <div style="flex-grow: 1">1</div>
+      <div style="flex-grow: 1">2</div>
+      <div style="flex-grow: 2">3</div>
+      <div style="flex-grow: 1">4</div>
+    </div>
+    <div class="flex-container-flex-shrink">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div style="flex-shrink: 0">4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div>
+    </div>
+    <div class="flex-container-flex-basis">
+      <div>1</div>
+      <div style="flex-basis: 200px">2</div>
+      <div>3</div>
+      <div>4</div>
+    </div>
+    <div class="flex-container-flex-grow-flex-shrink-flex-basis">
+      <div>1</div>
+      <div style="flex: 0 0 200px">2</div>
+      <div>3</div>
+      <div>4</div>
+    </div>
+    <div class="flex-container-align-self">
+      <div>1</div>
+      <div style="align-self: center">2</div>
+      <div>3</div>
+      <div>4</div>
+      <div style="align-self: flex-start">5</div>
+      <div style="align-self: flex-end">6</div>
+      <div>7</div>
+      <div>8</div>
+    </div>
   </body>
 </html>
