--- a/frontend-zero-to-hero/sushi.html
+++ b/frontend-zero-to-hero/sushi.html
@@ -11,17 +11,28 @@
       media="screen"
       href="./css/sush.css"
     />
-    <script src="main.js"></script>
   </head>
   <body>
+    <!-- <div class="main-container"> -->
     <div class="container">
       <div class="hero-image-container">
         <p class="hero-image-container-text">Hey Dear</p>
         <p class="hero-image-container-text-name">Sushi</p>
-        <div class="hero-image-container-suschi-image">
-          <img class="suchi-image-one" src="./img/laura-jones.jpg" alt="" />
+        <div class="image-container">
+          <div class="hero-image-container-suschi-image">
+            <img class="suchi-image-one" src="./img/su1.png" alt="" />
+          </div>
         </div>
+        <image-container class="image-container-dual-image">
+          <div class="hero-image-container-suschi-image-two">
+            <img class="suchi-image-two" src="./img/su2.jpeg" alt="" />
+          </div>
+          <div class="hero-image-container-suschi-image-three">
+            <img class="suchi-image-three" src="./img/su3.jpeg" alt="" />
+          </div>
+        </image-container>
       </div>
     </div>
+    <!-- </div> -->
   </body>
 </html>
