--- a/frontend-zero-to-hero/css-grid.html
+++ b/frontend-zero-to-hero/css-grid.html
@@ -32,6 +32,32 @@
         background-color: crimson;
       }
 
+      .el---1 {
+        background-color: blueviolet;
+      }
+      .el---2 {
+        background-color: orangered;
+      }
+      .el---3 {
+        background-color: green;
+        height: 150px;
+      }
+      .el---4 {
+        background-color: goldenrod;
+      }
+      .el---5 {
+        background-color: palevioletred;
+      }
+      .el---6 {
+        background-color: steelblue;
+      }
+      .el---7 {
+        background-color: yellow;
+      }
+      .el---8 {
+        background-color: crimson;
+      }
+
       .container--1 {
         /* STARTER */
         font-family: sans-serif;
@@ -41,24 +67,49 @@
 
         /* CSS GRID */
         display: grid;
-        grid-template-columns: 250px 250px 1fr 150px;
-        grid-template-rows: 300px 100px;
+        /* grid-template-columns: 250px 250px 1fr 150px; */
+        /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+        grid-template-columns: repeat(4, 1fr);
+        /* grid-template-rows: 300px 100px; */
+        grid-template-rows: 1fr 1fr;
+        /* height: 500px; */
         column-gap: 10px;
         row-gap: 40px;
+        display: none;
       }
-
+      .el--8 {
+        grid-column: 2/3;
+        grid-row: 1/2;
+      }
+      .el--2 {
+        /* grid-column: 1/2;
+        grid-row: 2/3; */
+        /* grid-column: 1/4; */
+        /* grid-column: 1 / span 4; */
+        grid-column: 1 / -1;
+        grid-row: 2/3;
+      }
+      .el--6 {
+        grid-row: 3/5;
+      }
       .container--2 {
         /* STARTER */
-        display: none;
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
-
-        width: 1000px;
+        margin: 40px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        justify-content: center;
+        align-content: center;
+        gap: 50px;
+        align-items: center;
+        justify-items: center;
       }
     </style>
   </head>
@@ -70,17 +121,17 @@
       <div class="el el--4">(4) are</div>
       <div class="el el--5">(5) amazing</div>
       <div class="el el--6">(6) languages</div>
-      <div class="el el--7">(7) to</div>
+      <!-- <div class="el el--7">(7) to</div> -->
       <div class="el el--8">(8) learn</div>
     </div>
 
     <div class="container--2">
-      <div class="el el--1">(1)</div>
-      <div class="el el--3">(3)</div>
-      <div class="el el--4">(4)</div>
-      <div class="el el--5">(5)</div>
-      <div class="el el--6">(6)</div>
-      <div class="el el--7">(7)</div>
+      <div class="el el---1">(1)</div>
+      <div class="el el---3">(3)</div>
+      <div class="el el---4">(4)</div>
+      <div class="el el---5">(5)</div>
+      <div class="el el---6">(6)</div>
+      <div class="el el---7">(7)</div>
     </div>
   </body>
 </html>
