css grid practice

--- a/frontend-zero-to-hero/practice-grid.html
+++ b/frontend-zero-to-hero/practice-grid.html
@@ -68,5 +68,57 @@
       <div class="grid-item-column-start-end7">7</div>
       <div class="grid-item-column-start-end8">8</div>
     </div>
+    <div class="grid-container-grid-row-start-end">
+      <div class="grid-item-row-start-end1">1</div>
+      <div class="grid-item-row-start-end2">2</div>
+      <div class="grid-item-row-start-end3">3</div>
+      <div class="grid-item-row-start-end4">4</div>
+      <div class="grid-item-row-start-end5">5</div>
+      <div class="grid-item-row-start-end6">6</div>
+      <div class="grid-item-row-start-end7">7</div>
+      <div class="grid-item-row-start-end8">8</div>
+    </div>
+    <div class="grid-container-grid-template-columns">
+      <div class="grid-template-columns1">1</div>
+      <div class="grid-template-columns2">2</div>
+      <div class="grid-template-columns3">3</div>
+      <div class="grid-template-columns4">4</div>
+      <div class="grid-template-columns5">5</div>
+      <div class="grid-template-columns6">6</div>
+      <div class="grid-template-columns7">7</div>
+      <div class="grid-template-columns8">8</div>
+    </div>
+    <div class="grid-container-grid-template-rows">
+      <div class="grid-template-rows1">1</div>
+      <div class="grid-template-rows2">2</div>
+      <div class="grid-template-rows3">3</div>
+      <div class="grid-template-rows4">4</div>
+      <div class="grid-template-rows5">5</div>
+      <div class="grid-template-rows6">6</div>
+    </div>
+    <div class="grid-container-justify-content">
+      <div class="grid-justify-content1">1</div>
+      <div class="grid-justify-content2">2</div>
+      <div class="grid-justify-content3">3</div>
+      <div class="grid-justify-content4">4</div>
+      <div class="grid-justify-content5">5</div>
+      <div class="grid-justify-content6">6</div>
+    </div>
+    <div class="grid-container-justify-content-space-around">
+      <div class="grid-justify-content-space-around1">1</div>
+      <div class="grid-justify-content-space-around2">2</div>
+      <div class="grid-justify-content-space-around3">3</div>
+      <div class="grid-justify-content-space-around4">4</div>
+      <div class="grid-justify-content-space-around5">5</div>
+      <div class="grid-justify-content-space-around6">6</div>
+    </div>
+    <div class="grid-justify-justify-content-space-between">
+      <div class="grid-justify-content-space-between1">1</div>
+      <div class="grid-justify-content-space-between2">2</div>
+      <div class="grid-justify-content-space-between3">3</div>
+      <div class="grid-justify-content-space-between4">4</div>
+      <div class="grid-justify-content-space-between5">5</div>
+      <div class="grid-justify-content-space-between6">6</div>
+    </div>
   </body>
 </html>
