grid align ,jestification

--- a/frontend-zero-to-hero/practice-grid.html
+++ b/frontend-zero-to-hero/practice-grid.html
@@ -120,5 +120,77 @@
       <div class="grid-justify-content-space-between5">5</div>
       <div class="grid-justify-content-space-between6">6</div>
     </div>
+    <div class="grid-justify-content-center">
+      <div class="grid-justify-content-center1">1</div>
+      <div class="grid-justify-content-center2">2</div>
+      <div class="grid-justify-content-center3">3</div>
+      <div class="grid-justify-content-center4">4</div>
+      <div class="grid-justify-content-center5">5</div>
+      <div class="grid-justify-content-center6">6</div>
+    </div>
+    <div class="grid-justify-content-start">
+      <div class="grid-justify-content-start1">1</div>
+      <div class="grid-justify-content-start2">2</div>
+      <div class="grid-justify-content-start3">3</div>
+      <div class="grid-justify-content-start4">4</div>
+      <div class="grid-justify-content-start5">5</div>
+      <div class="grid-justify-content-start6">6</div>
+    </div>
+    <div class="grid-justify-content-end">
+      <div class="grid-justify-content-end1">1</div>
+      <div class="grid-justify-content-end2">2</div>
+      <div class="grid-justify-content-end3">3</div>
+      <div class="grid-justify-content-end4">4</div>
+      <div class="grid-justify-content-end5">5</div>
+      <div class="grid-justify-content-end6">6</div>
+    </div>
+    <div class="grid-align-content-center">
+      <div class="grid-align-content-center1">1</div>
+      <div class="grid-align-content-center2">2</div>
+      <div class="grid-align-content-center3">3</div>
+      <div class="grid-align-content-center4">4</div>
+      <div class="grid-align-content-center5">5</div>
+      <div class="grid-align-content-center6">6</div>
+    </div>
+    <div class="grid-align-content-space-evenly">
+      <div class="grid-align-content-space-evenly1">1</div>
+      <div class="grid-align-content-space-evenly2">2</div>
+      <div class="grid-align-content-space-evenly3">3</div>
+      <div class="grid-align-content-space-evenly4">4</div>
+      <div class="grid-align-content-space-evenly5">5</div>
+      <div class="grid-align-content-space-evenly6">6</div>
+    </div>
+    <div class="grid-align-content-space-around">
+      <div class="grid-align-content-space-around1">1</div>
+      <div class="grid-align-content-space-around2">2</div>
+      <div class="grid-align-content-space-around3">3</div>
+      <div class="grid-align-content-space-around4">4</div>
+      <div class="grid-align-content-space-around5">5</div>
+      <div class="grid-align-content-space-around6">6</div>
+    </div>
+    <div class="grid-align-content-space-between">
+      <div class="grid-align-content-space-between1">1</div>
+      <div class="grid-align-content-space-between2">2</div>
+      <div class="grid-align-content-space-between3">3</div>
+      <div class="grid-align-content-space-between4">4</div>
+      <div class="grid-align-content-space-between5">5</div>
+      <div class="grid-align-content-space-between6">6</div>
+    </div>
+    <div class="grid-align-content-start">
+      <div class="grid-align-content-start1">1</div>
+      <div class="grid-align-content-start2">2</div>
+      <div class="grid-align-content-start3">3</div>
+      <div class="grid-align-content-start4">4</div>
+      <div class="grid-align-content-start5">5</div>
+      <div class="grid-align-content-start6">6</div>
+    </div>
+    <div class="grid-align-content-end">
+      <div class="grid-align-content-end1">1</div>
+      <div class="grid-align-content-end2">2</div>
+      <div class="grid-align-content-end3">3</div>
+      <div class="grid-align-content-end4">4</div>
+      <div class="grid-align-content-end5">5</div>
+      <div class="grid-align-content-end6">6</div>
+    </div>
   </body>
 </html>
