--- a/frontend-zero-to-hero/practice-grid.html
+++ b/frontend-zero-to-hero/practice-grid.html
@@ -11,7 +11,6 @@
       media="screen"
       href="./css/practice-grid.css"
     />
-    <script src="main.js"></script>
   </head>
   <body>
     <div class="grid-container">
@@ -191,6 +190,23 @@
       <div class="grid-align-content-end4">4</div>
       <div class="grid-align-content-end5">5</div>
       <div class="grid-align-content-end6">6</div>
+    </div>
+    <div class="grid-container-grid-column">
+      <div class="item1">1</div>
+      <div class="item2">2</div>
+      <div class="item3">3</div>
+      <div class="item4">4</div>
+      <div class="item5">5</div>
+      <div class="item6">6</div>
+      <div class="item7">7</div>
+      <div class="item8">8</div>
+      <div class="item9">9</div>
+      <div class="item10">10</div>
+      <div class="item11">11</div>
+      <div class="item12">12</div>
+      <div class="item13">13</div>
+      <div class="item14">14</div>
+      <div class="item15">15</div>
     </div>
   </body>
 </html>
