--- a/frontend-zero-to-hero/sushi.html
+++ b/frontend-zero-to-hero/sushi.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Page Title</title>
+    <title>We-Wish</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Roboto:wght@100&display=swap"
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,regular,600,700,900&subset=latin,latin-ext"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Oooh+Baby&family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
     <link
@@ -19,26 +25,41 @@
     />
   </head>
   <body>
-    <!-- <div class="main-container"> -->
     <div class="container">
-      <div class="hero-image-container">
-        <p class="hero-image-container-text">Hey Dear</p>
-        <p class="hero-image-container-text-name">Sushi</p>
-        <div class="image-container">
-          <div class="hero-image-container-suschi-image">
-            <img class="suchi-image-one" src="./img/su1.png" alt="" />
+      <section class="hero-section">
+        <article class="wishes_text">
+          <h1>
+            Blow out the candles and make a wish! May all your wishes and dreams
+            come true today on your birthday and throughout the year ahead.
+            <span class="wish-name">Sushi</span>
+          </h1>
+
+          <h2>
+            Blow out the candles and make a wish! May all your wishes and dreams
+            come true today on your birthday and throughout the year ahead.
+          </h2>
+        </article>
+
+        <figure>
+          <img src="./img/su4.jpg" alt="" />
+        </figure>
+      </section>
+      <section class="sub-hero">
+        <artical class="sub-hero">
+          <div class="love">
+            <img class="sub-hero-img-left" src="./img/su2.jpeg" alt="" />
+            <h1 class="love-text">Love</h1>
           </div>
-        </div>
-        <image-container class="image-container-dual-image">
-          <div class="hero-image-container-suschi-image-two">
-            <img class="suchi-image-two" src="./img/su2.jpeg" alt="" />
+          <div class="care">
+            <img class="sub-hero-img-middle" src="./img/su4.jpg" alt="" />
+            <h1 class="care-text">Care</h1>
           </div>
-          <div class="hero-image-container-suschi-image-three">
-            <img class="suchi-image-three" src="./img/su3.jpeg" alt="" />
+          <div class="affection">
+            <img class="sub-hero-img-right" src="./img/su3.jpeg" alt="" />
+            <h1 class="affection-text">Affection</h1>
           </div>
-        </image-container>
-      </div>
+        </artical>
+      </section>
     </div>
-    <!-- </div> -->
   </body>
 </html>
