--- a/frontend-zero-to-hero/sushi.html
+++ b/frontend-zero-to-hero/sushi.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <div class="container">
+      <header><span class="we-wish-header">We wish</span></header>
       <section class="hero-section">
         <article class="wishes_text">
           <h1>
