--- a/Advanced/sass/sass-practice/index.html
+++ b/Advanced/sass/sass-practice/index.html
@@ -28,5 +28,27 @@
         <a href="#" class="btn btn-white btn-animated">Discover our tools</a>
       </div>
     </header>
+    <section class="grid-test">
+      <div class="row">
+        <div class="col-1-of-2">1 of 2</div>
+        <div class="col-1-of-2">1 of 2</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">1 of 3</div>
+        <div class="col-1-of-3">1 of 3</div>
+        <div class="col-1-of-3">1 of 3</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">1 of 2</div>
+        <div class="col-2-of-3">1 of 2</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">1 of 4</div>
+        <div class="col-1-of-4">1 of 4</div>
+        <div class="col-1-of-4">1 of 4</div>
+        <div class="col-1-of-4">1 of 4</div>
+      </div>
+      4
+    </section>
   </body>
 </html>
