--- a/Advanced/sass/sass-practice/index.html
+++ b/Advanced/sass/sass-practice/index.html
@@ -60,12 +60,29 @@
     </section> -->
     <main>
       <section class="section-about">
-        <div class="u-center-text u-marging-bottom-8">
+        <div class="u-center-text u-marging-bottom-big">
           <h2 class="heading-secondary">Exciting tours adventurous people</h2>
         </div>
 
         <div class="row">
-          <div class="col-1-of-2">1 of 2</div>
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              ipsum sapiente aspernatur libero repellat quis consequatur ducimus
+              quam nisi exercitationem omnis earum qui.
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              ipsum sapiente aspernatur libero repellat.
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
           <div class="col-1-of-2">1 of 2</div>
         </div>
       </section>
