--- a/Advanced/sass/sass-practice/index.html
+++ b/Advanced/sass/sass-practice/index.html
@@ -83,7 +83,25 @@
             </p>
             <a href="#" class="btn-text">Learn more &rarr;</a>
           </div>
-          <div class="col-1-of-2">1 of 2</div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src=""
+                alt=""
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src=""
+                alt=""
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src=""
+                alt=""
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
         </div>
       </section>
     </main>
