--- a/Advanced/sass/sass-practice/index.html
+++ b/Advanced/sass/sass-practice/index.html
@@ -86,22 +86,89 @@
           <div class="col-1-of-2">
             <div class="composition">
               <img
-                src=""
-                alt=""
+                src="img/nat-1-large.jpg"
+                alt="photo-1"
                 class="composition__photo composition__photo--p1"
               />
               <img
-                src=""
-                alt=""
+                src="img/nat-2-large.jpg"
+                alt="photo-2"
                 class="composition__photo composition__photo--p2"
               />
               <img
-                src=""
-                alt=""
+                src="img/nat-3-large.jpg"
+                alt="photo-3"
                 class="composition__photo composition__photo--p3"
               />
             </div>
           </div>
+        </div>
+      </section>
+      <section class="section-feature">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary">Explore the world</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam, ipsum sapiente aspernatur.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary">Meet nature</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam, ipsum sapiente aspernatur.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary">Find your way</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam, ipsum sapiente aspernatur.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary">Live healthy life</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam, ipsum sapiente aspernatur.
+              </p>
+            </div>
+          </div>
+          basic-compass
+        </div>
+      </section>
+      <section class="section-tours">
+        <div class="u-center-text u-marging-bottom-big">
+          <h2 class="heading-secondary">MOST POPULAR TOURS</h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-1">
+                <div class="card__picture card__picture--1">&nbsp;</div>
+                <div class="card__heading">Heading</div>
+                <div class="card__details">Details</div>
+              </div>
+              <div class="card__side card__side--back">BACK</div>
+            </div>
+          </div>
+          <div class="col-1-of-3">2</div>
+          <div class="col-1-of-3">3</div>
         </div>
       </section>
     </main>
