--- a/Advanced/sass/sass-practice/index.html
+++ b/Advanced/sass/sass-practice/index.html
@@ -161,14 +161,139 @@
             <div class="card">
               <div class="card__side card__side--front card__side--front-1">
                 <div class="card__picture card__picture--1">&nbsp;</div>
-                <div class="card__heading">Heading</div>
-                <div class="card__details">Details</div>
+                <h4 class="card__heading">
+                  <span class="card__heading--span card__heading--span--1"
+                    >The Sea Explorer</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>3 day tours</li>
+                    <li>Up to 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy hotels</li>
+                    <li>Difficulty: easy</li>
+                  </ul>
+                </div>
               </div>
-              <div class="card__side card__side--back">BACK</div>
+              <div class="card__side card__side--back card__side--back-1">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$200</p>
+                  </div>
+                  <a href="#" target="_blank" class="btn btn-white"
+                    >Book now!</a
+                  >
+                </div>
+              </div>
             </div>
           </div>
-          <div class="col-1-of-3">2</div>
-          <div class="col-1-of-3">3</div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-1">
+                <div class="card__picture card__picture--2">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading--span card__heading--span--2"
+                    >The Forest Hiker</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>7 day tours</li>
+                    <li>Up to 40 people</li>
+                    <li>6 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: medium</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-2">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$497</p>
+                  </div>
+                  <a href="#" target="_blank" class="btn btn-white"
+                    >Book now!</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-1">
+                <div class="card__picture card__picture--3">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading--span card__heading--span--3"
+                    >The Snow Adventurer</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>5 day tours</li>
+                    <li>Up to 15 people</li>
+                    <li>3 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: hard</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$897</p>
+                  </div>
+                  <a href="#" target="_blank" class="btn btn-white"
+                    >Book now!</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-marging-top-huge">
+          <a href="#" target="_blank" class="btn btn-green btn-animated"
+            >Discover all tours</a
+          >
+        </div>
+
+        <!-- <div class="practice">
+          <div class="practice__fb practice__frontside">
+            <div class="practice__picturefb">&nbsp;</div>
+            <div class="practice__heading">
+              <span class="practice__heading__span">Back</span>
+            </div>
+          </div>
+          <div class="practice__fb practice__backside">
+            <h1>Dasari</h1>
+          </div>
+        </div> -->
+      </section>
+      <section class="section-stories">
+        <div class="u-center-text u-marging-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img class="story__img" src="./img/nat-8.jpg" alt="Img1" />
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam, ipsum sapiente aspernatur libero repellat quis
+                consequatur ducimus quam nisi exercitationem omnis earum qui.
+                Aperiam, ipsum sapiente aspernatur libero repellat quis
+                consequatur ducimus quam nisi exercitationem omnis earum qui.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
